Fixed two overflow-related issues.

--- a/game/static/game/scss/style.scss
+++ b/game/static/game/scss/style.scss
@@ -580,14 +580,14 @@ nav {
                 cursor: -o-grab;
                 display: inline-block;
                 min-height: 250px;
-                max-height: 400px;
+                max-height: 415px;
                 
                 box-sizing: border-box;
                 box-shadow: 0 0.5px 0 0 #ffffff inset, 0 1px 2px 0 #B3B3B3;
                 background-color: rgb(254, 254, 254);
                 border-radius: 2px;
                 font-size: 0 !important; // Removes the strange overflow in graph
-                // Should an 'overflow: hidden !important' be added here?
+                overflow: hidden !important; // Override overflow that is probably set by treant
     
                 & .node {
                     @include nodrag;
@@ -596,8 +596,8 @@ nav {
                     padding: 6px 30px; // 6px 14px
                     color: rgb(50, 50, 50);
                     background-color: white;
-                    font-size: 1rem;
-                    line-height: 1.1rem;
+                    font-size: 16px;
+                    line-height: 18px;
                     text-align: center;
                     white-space: nowrap;
                 
@@ -613,12 +613,12 @@ nav {
     
                 & .node-title {
                     color: rgb(127, 139, 143);
-                    font-size: 1rem;
+                    font-size: 16px;
                 }
 
                 & .node-desc {
                     color: rgb(124, 138, 143);
-                    font-size: 0.85rem;
+                    font-size: 14px;
                 }
             }
         }
